--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
-        gotk: [v0.1.8]
+        driftctl: [v0.11.0]
 
     runs-on: ${{ matrix.os }}
 
@@ -21,7 +21,7 @@ jobs:
         uses: asdf-vm/actions/plugin-test@v1.0.0
         with:
           version: ${{ matrix.gotk }}
-          command: gotk --version
+          command: driftctl version
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
