--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v1.0.0
         with:
-          version: ${{ matrix.gotk }}
+          version: ${{ matrix.driftctl }}
           command: driftctl version
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
