--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,17 +10,21 @@ jobs:
 
   plugin_test:
     strategy:
+      # matrix:
+      #   os: [macos-latest, ubuntu-latest]
+      #   driftctl: [v0.11.0]
+      fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
-        driftctl: [v0.11.0]
+        os:
+          - macos-latest
+          - ubuntu-latest
 
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: asdf_plugin_test
-        uses: asdf-vm/actions/plugin-test@v1.0.0
+      - name: Test plugin
+        uses: asdf-vm/actions/plugin-test@v1.1.0
         with:
-          version: ${{ matrix.driftctl }}
           command: driftctl version
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -32,3 +36,16 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run ShellCheck
         run: shellcheck bin/*
+
+  format:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install shfmt
+        run: brew install shfmt
+
+      - name: Run shfmt
+        run: shfmt -d .
